# engine

./: Cargo.toml  README.md
assets/ressources/: entities.ron
assets/scenes/: scene_1.ron
assets/shaders/: default.vert  default_cube.frag  default_cube.vert  default_material.frag  default_material.vert  light_source.frag  outline.frag  quad.frag  quad.vert  skybox.frag  skybox.vert  text.vert
gui/: Cargo.toml
gui/src/: lib.rs
src/: asset_manager.rs  camera.rs  constants.rs  ecs.rs  editor.rs  fonts.rs  game_controller.rs  game_loop.rs  game_object.rs  game_state.rs  helpers.rs  main.rs  opengl.rs  physics.rs  primitives.rs  render.rs  renderer.rs  scene_loader.rs  shader.rs  texture.rs  time.rs  utils.rs  watcher.rs  window.rs  world.rs
src/components/: camera.rs  collider.rs  light.rs  material.rs  mesh.rs  mod.rs  outline.rs  player.rs  rigid_body.rs  transform.rs
src/systems/: editor_camera.rs  mod.rs  physic.rs  player.rs  renderer.rs  selectable.rs
